k8s/ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: raj-ns
  labels:
    name: raj-ns
