k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raj-deployment
  namespace: raj-ns
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: raj-dev
  template:
    metadata:
      labels:
        app: raj-dev
    spec:
      containers:
      - name: nginx
        image: nginx
        resources:
          requests:
            cpu: "1"
            memory: 2Gi
        ports:
        - containerPort: 80
