k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: raj-svc
  namespace: raj-ns
spec:
  type: NodePort
  selector:
    app: raj-dev
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  # - name: https
  #   port: 443
  #   targetPort: ${container_http_port}
  #   protocol: TCP
