k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: raj-ns
  name: raj-ingress
  annotations:
    alb.ingress.kubernetes.io/listen-ports:  '{"HTTP":80}'
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - host: ramaseedsbhandar.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: raj-svc
            port:
              number: 80
